# domestic-market-blow-molding

./: .gitignore  pyproject.toml
domestic_market_blow_molding/EDA/: Multivariate_EDA.ipynb  eda.ipynb  univariate_ARIMA_eda.ipynb
domestic_market_blow_molding/data_engineering/: data_cleaning.ipynb
domestic_market_blow_molding/data_preprocessing/: blow_molding_market_preprocessed.csv  data_preprocessing.ipynb
domestic_market_blow_molding/modeling/: best_model.h5  modeling.ipynb  univariate_ARIMA_modeling.ipynb  univariate_LSTM_modeling.ipynb
domestic_market_blow_molding/resources/: blow_molding_market.csv  feature_dictionary.json
